# HadoopSparkHW

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
docker/: Dockerfile.spark
docker/hadoop-1node/: docker-compose.yaml
docker/hadoop-3node/: docker-compose.yaml
results/: execution_metrics_hadoop-1node_opt_False.json  execution_metrics_hadoop-1node_opt_True.json  execution_metrics_hadoop-3node_opt_False.json  execution_metrics_hadoop-3node_opt_True.json
scripts/: download_data.sh  run_experiments.sh  upload_data.sh
spark_app/: main.py  utils.py
