[project]
name = "HadoopSparkHW"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "psutil",
    "numpy",
    "worldcloud",
    "pyspark",
    "kagglehub",
    "pandas",
    "matplotlib",
    "seaborn",
    "vaderSentiment"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"